--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,44 @@
-<h1 id="title">Bookmark Keeper</h1>
+<link rel="stylesheet" href="styles.css">
+<link href='https://fonts.googleapis.com/css?family=Monofett' rel='stylesheet'>
+<style>
+    form { display: inline; }
+  </style>
 
-<body>
-
-<div id="bookmarks-list"> <% bookmarks.map((bookmark, index) => { %>
-  <div id="bookmark-<%= index %>">
-    name: <%= bookmark.name %>
-    url: <%= bookmark.url %>
-    description: <%= bookmark.description %>
-   </div>
-   <form action="/bookmark/<%= bookmark.id %>?_method=DELETE" method="post">
-     <input id="bookmark-<%= index %>-delete" type="submit" value="delete">
-   </form>
-   <form action="/update/<%= bookmark.id %>?_method=GET" method="get">
-    <input id="bookmark-<%= index %>-edit" type="submit" value="edit">
-  </form>
-   <br>
+<h1 class="centreHeading">Bookmarks</h1>
+<div class="bookmarkFont">
+<p> <% bookmark.map((bookmark, index) => { %>
+    <br>
+    <br>
+    <%= bookmark.url %>
+    <br>
+    <form action="/<%=bookmark.id%>?_method=DELETE" method="POST">
+    <input class="deleteButton" type="submit" value="Delete" id="deleteButton">
+    </form>
+    <form action="/edit/<%=bookmark.id%>" method="GET">
+        <input class="editButton" type="submit" value="Edit">
+    </form>
+    <form action="/bookmarks/<%=bookmark.id%>" method="GET">
+        <input class="commentButton" type="submit" value="View Comments">
+    </form>
+    <form action="/<%=bookmark.id%>" method="POST">
+        <select id="tag" name="tag">
+            <option value="animal" >Animals</option>
+            <option value="book">Books</option>
+            <option value="education">Education</option>
+            <option value="films">Films</option>
+            <option value="music">Music</option>
+            <option value="other">Other</option>
+            <option value="personal">Personal</option>
+            <option value="pictures">Pictures</option>
+            <option value="web">Websites</option>
+        </select>
+        <input class="tagButton" type="submit" value="Add a Tag">
+    </form>
     <% }) %>
+</p>
 </div>
 
-
-<form action="/bookmark" method="post">
-
-  <input id="name" type="text" placeholder="Enter name" name="name"></input>
-  <input id="url" type="text" placeholder="Enter url" name="url"></input>
-  <input id="desc" type="text" placeholder="Enter description" name="desc"></input>
-  <input id="submit-button" type="submit" value="Add"></input>
-
-  </form>
-
-  </body>
+<form class="addBox" action="/" method="post">
+    <input id="url" type="text" name="url" >
+    <input class="myButton" id="addButton" type="submit" value="Add">
+</form>
